--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,15 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+root:
+    path:      /
+    defaults:  { _controller: AppBundle:Default:index }
+user_create:
+    path: /user/create
+    defaults: { _controller: AppBundle:User:create }
+user_get:
+    path: /user/{id}
+    defaults: { _controller: AppBundle:User:get }
+card_create:
+    path: /card/create
+    defaults: { _controller: AppBundle:Card:create }
