--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,12 +7,12 @@ root:
 user_create:
     path: /user/create
     defaults: { _controller: AppBundle:User:create }
-user_get:
-    path: /user/{id}
-    defaults: { _controller: AppBundle:User:get }
 user_login:
     path: /user/login
     defaults: { _controller: AppBundle:User:login }
+user_get:
+    path: /user/{id}
+    defaults: { _controller: AppBundle:User:get }
 card_create:
     path: /card/create
     defaults: { _controller: AppBundle:Card:create }
@@ -25,3 +25,6 @@ deck_get:
 card_share:
     path: /card/{id}/user/{userId}
     defaults: { _controller: AppBundle:Card:share }
+category_list:
+    path: /category/list
+    defaults: { _controller: AppBundle:Category:list }
